<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_wipe_category" >
        <EditTextPreference android:key="wipe_activation_sms"
                android:title="@string/preferences_wipe_activation_sms_title"
                android:summary="@string/preferences_wipe_activation_sms_summary"
                android:maxLength="160"
                android:defaultValue="@string/config_default_wipe_activation_sms" />
        <CheckBoxPreference android:key="wipe_sdcard"
                            android:title="@string/preferences_wipe_sdcard_title"
                            android:summary="@string/preferences_wipe_sdcard_summary"
                            android:defaultValue="@bool/config_default_wipe_sdcard" />
     </PreferenceCategory>
</PreferenceScreen>
